src/scanner.c
@@ -411,11 +411,10 @@ static bool
 is_nullable_type(struct arg *arg)
 {
 	switch (arg->type) {
-	/* Strings, objects, and arrays are possibly nullable */
+	/* Strings and objects are possibly nullable */
 	case STRING:
 	case OBJECT:
 	case NEW_ID:
-	case ARRAY:
 		return true;
 	default:
 		return false;
